[java-inspection] IDEA-377691 Nullable incompatibilities. Return types over type parameters
GitOrigin-RevId: bba0a4424e68c1b9f8f61071a07ee56977edb379